attempt to use VM.getNanoTimeAdjustment(seconds) from import jdk.internal.misc.VM;